# CMakeExtraUtils

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.distro/: cmake-extra-utils.spec
.distro/plans/: full.fmf  main.fmf.dist-git
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release.yaml  step_docs.yaml  step_pre-commit.yaml  step_test.yaml  test.yaml
cmake/: CMakePresets-defaults.json  CmakeExtraUtilsConfig.cmake.in  DynamicVersion.cmake  DynamicVersion.md  FindPackage.cmake  PackageComps.cmake  PackageComps.md
cmake/compat/: CEU_FetchContent.cmake
distro/: .gitignore  cmake-extra-utils.spec
distro/tmt/plans/: full.fmf
distro/tmt/setup/: packages.yaml
distro/tmt/test/find_package/: CMakeLists.txt  test.sh
doc/: README.md  conf.py  index.md  install.md
doc/cmake_modules/: DynamicVersion.md  PackageComps.md
docs/: conf.py  index.md  install.md
docs/cmake_modules/: DynamicVersion.md  PackageComps.md  index.md
test/: .gitignore  CMakeLists.txt  main.fmf  plans.fmf  test.sh
test/DynamicVersion/: CMakeLists.txt  main.fmf  pyproject.toml  test_archive.sh  test_fallback.sh  test_git.sh  test_sdist.sh
test/DynamicVersion/archive/: .git_archival.txt  CMakeLists.txt  main.fmf
test/DynamicVersion/fallback/: CMakeLists.txt  main.fmf  test_basic.sh
test/DynamicVersion/git_repo/: main.fmf  test.sh  test_basic.sh  test_no_tag.sh
test/DynamicVersion/simple/: CMakeLists.txt
test/DynamicVersion/src/: commit.cpp  commit.h.in  version.cpp  version.h.in
test/FetchContent/: CMakeLists.txt
test/PackageComps/: main.fmf  test.sh  test_simple.sh
test/PackageComps/simple_provider/: CMakeLists.txt
test/PackageComps/simple_provider/cmake/: TestProviderConfig.cmake.in
test/PackageComps/simple_provider/src/: hello.cpp
test/PackageComps/simple_user/: CMakeLists.txt
test/find_package/: CMakeLists.txt
test/import/: CMakeLists.txt  main.fmf  test.sh  test_FetchContent.sh  test_find_package.sh
test/package/: CMakeLists.txt
test/package/FetchContent/: CMakeLists.txt
test/package/find_package/: CMakeLists.txt
test/plans/: full.fmf  main.fmf.dist-git  rpmlint.fmf  test.fmf
test/rpmlint/: cmake-extra-utils.rpmlintrc  cmake-extra-utils.spec  main.fmf
tmt/: main.fmf.dist-git  plan.fmf
tmt/plans/: .gitignore  tests.fmf
tmt/setup/: packages.yaml
