[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CMakeExtraUtils-dev"
version = "0.0.0"
description = "Development environment for CMakeExtraUtils"
readme = "README.md"
license = { file = "LICENSE" }


[project.optional-dependencies]
docs = [
    "sphinx >= 6.0",
    "sphinx-rtd-theme",
    "sphinx-design @ git+https://github.com/marxin/sphinx-design@sphinx-6",
    "sphinx-togglebutton",
    "myst-parser >= 1.0",
    "breathe",
]
dev = [
    "pre-commit",
]

[tool.setuptools]
packages = []
