[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "CMakeExtraUtils-dev"
version = "0.0.0"
description = "Development environment for CMakeExtraUtils"
readme = "README.md"
license = { file = "LICENSE" }


[project.optional-dependencies]
docs = [
    "sphinx >= 6.0",
    "sphinx-rtd-theme",
    "sphinx-design",
    "sphinx-togglebutton",
    "myst-parser",
    "breathe",
]
dev = [
    "pre-commit",
]

[tool.setuptools]
packages = []
